--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WZ SERVICES — Configuration Guide</title>
+  <title>WZ SERVICES - Configuration Guide</title>
   <link rel="icon" href="favicon.ico">
   <style>
 :root{--bg:#0b0d10;--panel:#0f141b;--muted:#a9b6c7;--txt:#e8eef6;--accent:#00c8ff;--br:#1d2733}
@@ -11,27 +11,30 @@
 a{color:var(--accent);text-decoration:none}a:hover{text-decoration:underline}
 .wrap{max-width:980px;margin:0 auto;padding:24px}
 header{display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;gap:16px}
-.brand{font-weight:800;letter-spacing:.4px}
+.brand{font-weight:800;letter-spacing:.3px}
 .langs{display:flex;gap:10px;color:var(--muted);font-size:14px;flex-wrap:wrap}
 .card{background:var(--panel);border:1px solid var(--br);border-radius:14px;padding:20px;box-shadow:0 6px 24px rgba(0,0,0,.35)}
-h1{font-size:28px;margin:6px 0 12px}h2{font-size:20px;margin:18px 0 8px}
+h1{font-size:28px;margin:6px 0 12px}h2{font-size:20px;margin:18px 0 8px}h3{font-size:18px;margin:10px 0 6px}
 hr{border:0;border-top:1px solid var(--br);margin:14px 0}
 .notice{background:#0f1824;border:1px dashed #2a3b52;padding:14px;border-radius:12px;color:var(--muted)}
 .btn{display:inline-block;background:#0e7490;color:#fff;padding:10px 14px;border-radius:10px;border:1px solid #1a9dbc;transition:.2s}
 .btn:hover{filter:brightness(1.08);transform:translateY(-1px)}
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:14px}
 .tool{border:1px solid var(--br);border-radius:12px;padding:14px;background:#0f141b}
-.tool h3{margin:0 0 8px 0}
-.tool p{margin:0 0 10px 0;color:var(--muted)}
+.tool p{margin:6px 0 10px;color:var(--muted)}
 .small{font-size:13px;color:var(--muted)}
 .back{font-size:14px;color:var(--muted)}
 .tag{display:inline-flex;gap:6px;align-items:center;padding:4px 10px;border-radius:999px;background:#0e1622;border:1px solid #203044;color:#b9cbe0;font-size:13px}
+.row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+.cta-row{display:flex;gap:10px;flex-wrap:wrap}
+.center{display:flex;justify-content:center;align-items:center;gap:8px}
+.kbd{display:inline-block;padding:2px 8px;border-radius:8px;border:1px solid var(--br);background:#0d1220;color:#a6b9cf;font-size:12px}
 </style>
 </head>
 <body>
   <div class="wrap">
     <header>
-      <div class="brand">WZ SERVICES — GUIDE</div>
+      <div class="brand">WZ SERVICES</div>
       <nav class="langs">ENGLISH · FRANÇAIS · DEUTSCH · РУССКИЙ · ESPAÑOL · 中文</nav>
     </header>
 
@@ -40,32 +43,59 @@ hr{border:0;border-top:1px solid var(--br);margin:14px 0}
       <h1>Select Your Game</h1>
       <p>Choose the game you want to configure</p>
 
+      <div class="row"><a class="back" href="index.html">Back</a> <strong>WZ SERVICES</strong></div>
+
       <h2>Game Guides</h2>
       <p>Select a guide or troubleshooting option</p>
 
       <h2>Crash Issues</h2>
       <p>Troubleshooting guides for common crash and error issues</p>
 
-      <hr>
-      <div class="tag">Step 1 of 6</div> <span class="tag">01</span>
-      <h2>Step Title</h2>
-      <p>Step description...</p>
-      <p><a class="btn" href="downloads.html">View Visual Guide</a></p>
+      <div class="row"><a class="back" href="index.html">Back</a> <strong>WZ SERVICES</strong></div>
 
-      <div class="notice">
-        <strong>IMPORTANT NOTICE</strong><br>
-        You must complete the GLOBAL GUIDE before selecting any product. Products do not include the guide
-        inside — they only explain how to use them after setup. Make sure to follow the GLOBAL GUIDE first to
-        avoid errors or issues.
+      <div class="row" style="margin:10px 0;">
+        <span>Step 1 of 6</span> <span class="tag">01</span>
       </div>
 
-      <p style="margin-top:12px;">
-        <a class="btn" href="downloads.html">Go to GLOBAL GUIDE</a>
-        <a class="btn" href="downloads.html">Downloads</a>
-      </p>
-    </div>
+      <h2>Step Title</h2>
+      <p>Step description...</p>
 
-    <p class="small">© WZ Services — mirrored layout.</p>
+      <h3>Instructions</h3>
+      <p><a class="btn" href="#" onclick="alert('Visual guide placeholder')">View Visual Guide</a></p>
+
+      <div class="center" style="font-size:22px;">⚠</div>
+      <h4>Warning</h4>
+      <p class="small">Warning message...</p>
+
+      <div class="cta-row">
+        <a class="btn" href="#">Complete</a>
+        <a class="btn" href="#">Next</a>
+      </div>
+
+      <div class="row" style="margin-top:14px;"><strong>WZ SERVICES Configuration Complete</strong></div>
+      <div class="center" style="font-size:22px;">✓</div>
+      <h2>Configuration Complete</h2>
+      <p>Your system is now properly configured for</p>
+
+      <p><a class="btn" href="index.html">Start Over</a></p>
+
+      <h2>System Requirements Checklist</h2>
+      <p>At the end of this guide, you will need to have this:</p>
+
+      <div class="cta-row">
+        <a class="btn" href="#">Cancel</a>
+        <a class="btn" href="#">Start Guide</a>
+      </div>
+
+      <div class="center" style="font-size:20px;margin-top:10px;">⚠️</div>
+      <h2>IMPORTANT NOTICE</h2>
+      <p>You must complete the GLOBAL GUIDE before selecting any product.</p>
+      <p>Products do not include the guide inside — they only explain how to use them after setup.</p>
+      <p>Make sure to follow the GLOBAL GUIDE first to avoid errors or issues.</p>
+      <p><a class="btn" href="downloads.html">Go to GLOBAL GUIDE</a></p>
+
+      <p class="small">Continuing in 5 seconds...</p>
+    </div>
   </div>
 </body>
 </html>
